--- a/FollowingStocks/Base.lproj/Main.storyboard
+++ b/FollowingStocks/Base.lproj/Main.storyboard
@@ -10,6 +10,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -410,17 +411,23 @@
                     <navigationItem key="navigationItem" title="Title" id="Z92-Na-lVj">
                         <rightBarButtonItems>
                             <barButtonItem title="Follow" id="EQ1-eW-qfm"/>
-                            <barButtonItem title="PortFolio" id="6T9-ov-jJj"/>
+                            <barButtonItem title="PortFolio" id="6T9-ov-jJj">
+                                <connections>
+                                    <action selector="portfolioAction:" destination="BJF-VD-jGW" id="MAi-m5-ywH"/>
+                                </connections>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="changeLabel" destination="aKh-3J-v1F" id="XHx-iU-jxr"/>
                         <outlet property="changePercentLabel" destination="oSn-uz-i3b" id="1D2-qV-jDL"/>
+                        <outlet property="followButton" destination="EQ1-eW-qfm" id="tlT-Aj-6t3"/>
                         <outlet property="highLabel" destination="87H-nF-G83" id="gzk-WI-m30"/>
                         <outlet property="lastestTradingDayLabel" destination="Kds-DN-hAC" id="AON-wx-7fx"/>
                         <outlet property="lowLabel" destination="UWm-Lc-bsz" id="e6x-yU-lql"/>
                         <outlet property="nameLabel" destination="2el-jy-PoL" id="nIh-Gu-EC2"/>
                         <outlet property="openLabel" destination="vuV-3E-zSI" id="Xzq-fI-oiz"/>
+                        <outlet property="portfolioButton" destination="6T9-ov-jJj" id="xIf-lZ-dyK"/>
                         <outlet property="previousCloseLabel" destination="o9z-Tj-tYz" id="mUC-ah-giO"/>
                         <outlet property="priceLabel" destination="PTf-tc-e4U" id="sIK-V4-ABw"/>
                         <outlet property="symbolLabel" destination="4O3-X8-mcj" id="Ds4-75-RhY"/>
@@ -430,6 +437,133 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HTF-Zq-9vL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2705" y="1310"/>
+        </scene>
+        <!--Moving your Portfolio-->
+        <scene sceneID="qGw-fC-vNJ">
+            <objects>
+                <viewController storyboardIdentifier="MovingPortfolioViewController" title="Moving your Portfolio" modalPresentationStyle="overFullScreen" id="O4c-IM-jmY" customClass="MovingPortfolioViewController" customModule="FollowingStocks" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="obR-mk-81z">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Moving your Portfolio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bj6-FM-B11">
+                                <rect key="frame" x="10" y="20" width="355" height="50"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="azl-WD-e9r">
+                                <rect key="frame" x="10" y="90" width="355" height="577"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="OHd-aO-htY">
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="35"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paper" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Jy-e2-rzp">
+                                                <rect key="frame" x="0.0" y="0.0" width="72" height="35"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="paper" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QAW-6B-B0X">
+                                                <rect key="frame" x="90" y="0.0" width="265" height="35"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Hxi-5N-h8L">
+                                        <rect key="frame" x="0.0" y="50" width="355" height="35"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCy-CO-pbG">
+                                                <rect key="frame" x="0.0" y="0.0" width="107" height="35"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="paper" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cjf-G2-HVk">
+                                                <rect key="frame" x="125" y="0.0" width="230" height="35"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Ymq-DA-Ybe">
+                                        <rect key="frame" x="0.0" y="100" width="355" height="35"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLj-NR-P2u">
+                                                <rect key="frame" x="0.0" y="0.0" width="63" height="35"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="paper" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GEx-vH-xiP">
+                                                <rect key="frame" x="81" y="0.0" width="274" height="35"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="ePO-gq-7wT">
+                                        <rect key="frame" x="0.0" y="150" width="355" height="35"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xsk-Or-ZbU">
+                                                <rect key="frame" x="0.0" y="0.0" width="59" height="35"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="paper" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tnE-v1-2iy">
+                                                <rect key="frame" x="77" y="0.0" width="278" height="35"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="firstBaseline" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="hvu-da-HGr">
+                                        <rect key="frame" x="0.0" y="200" width="355" height="377"/>
+                                        <subviews>
+                                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sSG-15-wPU">
+                                                <rect key="frame" x="0.0" y="341" width="173.5" height="36"/>
+                                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <state key="normal" title="Cancel"/>
+                                                <connections>
+                                                    <action selector="cancelAction:" destination="O4c-IM-jmY" eventType="touchUpInside" id="3xw-py-SK2"/>
+                                                </connections>
+                                            </button>
+                                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSN-L6-hoY">
+                                                <rect key="frame" x="181.5" y="341" width="173.5" height="36"/>
+                                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <state key="normal" title="Add"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="azl-WD-e9r" firstAttribute="top" secondItem="Bj6-FM-B11" secondAttribute="bottom" constant="20" id="0gY-WL-Ub3"/>
+                            <constraint firstItem="Bj6-FM-B11" firstAttribute="leading" secondItem="5Rb-UO-0BO" secondAttribute="leading" constant="10" id="8as-kc-hzW"/>
+                            <constraint firstItem="Bj6-FM-B11" firstAttribute="bottom" secondItem="5Rb-UO-0BO" secondAttribute="top" constant="50" id="IFw-IF-Lq9"/>
+                            <constraint firstItem="Bj6-FM-B11" firstAttribute="trailing" secondItem="5Rb-UO-0BO" secondAttribute="trailing" constant="-10" id="OOF-3N-TRA"/>
+                            <constraint firstItem="azl-WD-e9r" firstAttribute="leading" secondItem="5Rb-UO-0BO" secondAttribute="leading" constant="10" id="ObB-J5-Ni8"/>
+                            <constraint firstItem="Bj6-FM-B11" firstAttribute="top" secondItem="5Rb-UO-0BO" secondAttribute="top" id="u6d-zc-w5e"/>
+                            <constraint firstItem="azl-WD-e9r" firstAttribute="bottom" secondItem="5Rb-UO-0BO" secondAttribute="bottom" id="u7U-7p-Rt9"/>
+                            <constraint firstItem="azl-WD-e9r" firstAttribute="trailing" secondItem="5Rb-UO-0BO" secondAttribute="trailing" constant="-10" id="x6O-yD-suT"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5Rb-UO-0BO"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rFW-vi-HHy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4096.8000000000002" y="1308.3958020989505"/>
         </scene>
         <!--Portifolio-->
         <scene sceneID="Qmg-OZ-Ptd">
